components/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    platform.contract-first.io/secrets: enabled
