components/keycloak/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-idp-keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: '-5'
    service.beta.openshift.io/serving-cert-secret-name: cf-idp-keycloak-tls
spec:
  selector:
    app: keycloak
    app.kubernetes.io/instance: cf-idp-keycloak
    app.kubernetes.io/managed-by: keycloak-operator
  ports:
    - name: https
      port: 8443
      targetPort: 8443
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cf-idp-keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: '5'
spec:
  to:
    kind: Service
    name: cf-idp-keycloak
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
